implemented error handling in custom jetty class; refactored service execution and other methods to throw exceptions accordingly